# libmdmp

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libmdmp-wiki.ini  libmdmp.ini  libmdmp.pc.in  libmdmp.spec.in  synctestdata.ps1  synctestdata.sh
.github/workflows/: build.yml  build_linux.yml  build_ossfuzz.yml
.travis/: runtests.sh  script.sh
common/: byte_stream.h  common.h  config_borlandc.h  config_msc.h  config_winapi.h  file_stream.h  memory.h  narrow_string.h  system_string.h  types.h.in  wide_string.h
documentation/: Minidump (MDMP) format.asciidoc
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libmdmp.h.in
include/libmdmp/: codepage.h  definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libmdmp/: Makefile.am  libmdmp.c  libmdmp.rc.in  libmdmp_codepage.h  libmdmp_debug.c  libmdmp_debug.h  libmdmp_definitions.h  libmdmp_definitions.h.in  libmdmp_error.c  libmdmp_error.h  libmdmp_extern.h  libmdmp_file.c  libmdmp_file.h  libmdmp_file_header.c  libmdmp_file_header.h  libmdmp_io_handle.c  libmdmp_io_handle.h  libmdmp_libbfio.h  libmdmp_libcdata.h  libmdmp_libcerror.h  libmdmp_libclocale.h  libmdmp_libcnotify.h  libmdmp_libcstring.h  libmdmp_libfdata.h  libmdmp_libfdatetime.h  libmdmp_libuna.h  libmdmp_notify.c  libmdmp_notify.h  libmdmp_stream.c  libmdmp_stream.h  libmdmp_stream_descriptor.c  libmdmp_stream_descriptor.h  libmdmp_stream_io_handle.c  libmdmp_stream_io_handle.h  libmdmp_support.c  libmdmp_support.h  libmdmp_types.h  libmdmp_unused.h  mdmp_file_header.h
m4/: yaltools.m4
manuals/: Makefile.am  libmdmp.3  mdmpinfo.1
mdmptools/: Makefile.am  info_handle.c  info_handle.h  mdmpinfo.c  mdmpinput.c  mdmpinput.h  mdmpoutput.c  mdmpoutput.h  mdmptools_getopt.c  mdmptools_getopt.h  mdmptools_i18n.h  mdmptools_libbfio.h  mdmptools_libcerror.h  mdmptools_libclocale.h  mdmptools_libcnotify.h  mdmptools_libcstring.h  mdmptools_libcsystem.h  mdmptools_libmdmp.h  mdmptools_libuna.h  mdmptools_output.c  mdmptools_output.h  mdmptools_signal.c  mdmptools_signal.h  mdmptools_unused.h
msvscpp/: Makefile.am  libmdmp.sln
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcfile/: libcfile.vcproj
msvscpp/libclocale/: libclocale.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcpath/: libcpath.vcproj
msvscpp/libcsplit/: libcsplit.vcproj
msvscpp/libcsystem/: libcsystem.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libfcache/: libfcache.vcproj
msvscpp/libfdata/: libfdata.vcproj
msvscpp/libmdmp/: libmdmp.vcproj
msvscpp/mdmp_test_error/: mdmp_test_error.vcproj
msvscpp/mdmp_test_file/: mdmp_test_file.vcproj
msvscpp/mdmp_test_file_header/: mdmp_test_file_header.vcproj
msvscpp/mdmp_test_get_version/: mdmp_test_get_version.vcproj
msvscpp/mdmp_test_io_handle/: mdmp_test_io_handle.vcproj
msvscpp/mdmp_test_notify/: mdmp_test_notify.vcproj
msvscpp/mdmp_test_open_close/: mdmp_test_open_close.vcproj
msvscpp/mdmp_test_stream/: mdmp_test_stream.vcproj
msvscpp/mdmp_test_stream_descriptor/: mdmp_test_stream_descriptor.vcproj
msvscpp/mdmp_test_stream_io_handle/: mdmp_test_stream_io_handle.vcproj
msvscpp/mdmp_test_support/: mdmp_test_support.vcproj
msvscpp/mdmp_test_tools_info_handle/: mdmp_test_tools_info_handle.vcproj
msvscpp/mdmp_test_tools_output/: mdmp_test_tools_output.vcproj
msvscpp/mdmp_test_tools_signal/: mdmp_test_tools_signal.vcproj
msvscpp/mdmpinfo/: mdmpinfo.vcproj
ossfuzz/: Makefile.am  file_fuzzer.c  file_fuzzer.cc  ossfuzz_libbfio.h  ossfuzz_libmdmp.h
tests/: Makefile.am  mdmp_test_error.c  mdmp_test_file.c  mdmp_test_file_header.c  mdmp_test_functions.c  mdmp_test_functions.h  mdmp_test_get_version.c  mdmp_test_getopt.c  mdmp_test_getopt.h  mdmp_test_io_handle.c  mdmp_test_libbfio.h  mdmp_test_libcerror.h  mdmp_test_libclocale.h  mdmp_test_libcnotify.h  mdmp_test_libcstring.h  mdmp_test_libcsystem.h  mdmp_test_libmdmp.h  mdmp_test_libuna.h  mdmp_test_macros.h  mdmp_test_memory.c  mdmp_test_memory.h  mdmp_test_notify.c  mdmp_test_open_close.c  mdmp_test_stream.c  mdmp_test_stream_descriptor.c  mdmp_test_stream_io_handle.c  mdmp_test_support.c  mdmp_test_tools_info_handle.c  mdmp_test_tools_output.c  mdmp_test_tools_signal.c  mdmp_test_unused.h  pkgbuild.sh  runtests.sh  test_api_types.ps1  test_api_types.sh  test_library.at  test_library.ps1  test_library.sh  test_manpages.at  test_mdmpinfo.ps1  (+6 more)
