include_HEADERS = \
	libmdmp.h

pkginclude_HEADERS = \
	libmdmp/codepage.h \
	libmdmp/definitions.h \
	libmdmp/error.h \
	libmdmp/extern.h \
	libmdmp/features.h \
	libmdmp/types.h

EXTRA_DIST = \
	libmdmp.h.in \
	libmdmp/definitions.h.in \
	libmdmp/features.h.in \
	libmdmp/types.h.in

DISTCLEANFILES = \
	libmdmp.h \
	libmdmp/definitions.h \
	libmdmp/features.h \
	libmdmp/types.h \
	Makefile \
	Makefile.in

