MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libmdmp/libmdmp.vcproj \
	libuna/libuna.vcproj \
	mdmp_test_error/mdmp_test_error.vcproj \
	mdmp_test_file/mdmp_test_file.vcproj \
	mdmp_test_open_close/mdmp_test_open_close.vcproj \
	mdmp_test_support/mdmp_test_support.vcproj \
	mdmpinfo/mdmpinfo.vcproj \
	libmdmp.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

