MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libmdmp/libmdmp.vcproj \
	libuna/libuna.vcproj \
	mdmp_test_error/mdmp_test_error.vcproj \
	mdmp_test_file/mdmp_test_file.vcproj \
	mdmp_test_file_header/mdmp_test_file_header.vcproj \
	mdmp_test_io_handle/mdmp_test_io_handle.vcproj \
	mdmp_test_notify/mdmp_test_notify.vcproj \
	mdmp_test_stream/mdmp_test_stream.vcproj \
	mdmp_test_stream_descriptor/mdmp_test_stream_descriptor.vcproj \
	mdmp_test_stream_io_handle/mdmp_test_stream_io_handle.vcproj \
	mdmp_test_support/mdmp_test_support.vcproj \
	mdmp_test_tools_info_handle/mdmp_test_tools_info_handle.vcproj \
	mdmp_test_tools_output/mdmp_test_tools_output.vcproj \
	mdmp_test_tools_signal/mdmp_test_tools_signal.vcproj \
	mdmpinfo/mdmpinfo.vcproj \
	libmdmp.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

DISTCLEANFILES = \
	Makefile \
	Makefile.in

